--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>18/10/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Mustafa Amir (man, 22)</b><br>Region of origin: <b>Kurdistan-Iraq</b><br>Cause of death: <b>found dead by a highway in Foggia (IT) after reportedly suffocating in van</b><br>Source: MNS<br>
+Found dead: <b>22/02/05</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Ben Habra Saharaouis (man)</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>suicide, hanged himself while remanded in police custody in Vienna (AT), authorities tried to suppress his case</b><br>Source: NR<br>
 
 <br>
 
