--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>1999</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Diallo</b><br>Region of origin: <b>Guinea</b><br>Cause of death: <b>died in a Guinea prison after violent deportation from Düsseldorf (DE) on 30 June</b><br>Source: ARI/Guineenne des Droits de l'Homme<br>
+Found dead: <b>09/02/18</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (3 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died of hypothermia, 27 miles off Alboran Island in Alboran Sea between Morocco and Spain; 32 survivors</b><br>Source: SalvaM/Caminando/IOM<br>
 
 <br>
 
