--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>09/02/18</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (3 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died of hypothermia, 27 miles off Alboran Island in Alboran Sea between Morocco and Spain; 32 survivors</b><br>Source: SalvaM/Caminando/IOM<br>
+Found dead: <b>04/06/17</b><br>Number of person: <b>9</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Pakistan, Afghanistan</b><br>Cause of death: <b>accident with minibus driven by 16-year-old near Pazardjik (BG) close to Turkish-Greek border; 7 survivors</b><br>Source: DW/IOM<br>
 
 <br>
 
