--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>10/11/05</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Lizwane Ndlovu (woman, 29)</b><br>Region of origin: <b>Zimbabwe</b><br>Cause of death: <b>died in Birmingham hospital (GB) after release from Yarl's Wood removal centre (GB)</b><br>Source: IRR<br>
+Found dead: <b>16/06/03</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N. (4 women)</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>drowned after ship sank while travelling from Tunisia to Lampedusa (IT)</b><br>Source: LR/IPL/CNNit/ILN/CDS/TL<br>
 
 <br>
 
