--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>16/06/03</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N. (4 women)</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>drowned after ship sank while travelling from Tunisia to Lampedusa (IT)</b><br>Source: LR/IPL/CNNit/ILN/CDS/TL<br>
+Found dead: <b>09/09/03</b><br>Number of person: <b>26</b><br>Name, gender, age: <b>N.N. (2 women)</b><br>Region of origin: <b>Pakistan, Asia</b><br>Cause of death: <b>drowned after boat capsized in the Evros River on Turkish-Greek border</b><br>Source: BBC/ST/AP<br>
 
 <br>
 
