--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Aug 01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (young man)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned after boat reportedly capsized and sank near Fuerteventura (ES)</b><br>Source: SZ<br>
+Found dead: <b>22/01/09</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Vivede (woman, 19)</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>died of burns and exposure while sailing from Africa to Lampedusa (IT)</b><br>Source: LR/ASCA<br>
 
 <br>
 
