--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>27/07/13</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Mohammad Hassan (man)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>died in hospital in Athens from lung infection ignored for months by guards at Korinthos detention centre (GR)</b><br>Source: Kuwait Times<br>
+Found dead: <b>Aug 96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Metin Akbel</b><br>Region of origin: <b>Turkey</b><br>Cause of death: <b>presumed dead, disappeared after being deported from Germany to Turkey</b><br>Source: ARI<br>
 
 <br>
 
