--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>16/10/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 26)</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>stowaway, hit by bumper of truck he was hidden in near La Jonquera (ES) on border with France</b><br>Source: DiariGirona/IOM<br>
+Found dead: <b>18/02/06</b><br>Number of person: <b>9</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>reportedly drowned in shipwreck off coast of Libya while travelling to Italy</b><br>Source: ST<br>
 
 <br>
 
