--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Jun 15</b><br>Number of person: <b>6</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned after boat sank near Kara Ada (TR), going from Bodrum (TR) to Kos (GR); 56 rescued</b><br>Source: Imkander<br>
+Found dead: <b>07/09/12</b><br>Number of person: <b>74</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Tunisia</b><br>Cause of death: <b>reportedly drowned after boat sank off coast of Lampedusa (IT); bodies and boat still missing</b><br>Source: PICUM/MAS/LRP/FE/BCC/CNN<br>
 
 <br>
 
