--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>20/08/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (young man)</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>drowned while travelling to Spain, found north of Cape Three Forks (MA)</b><br>Source: MNS<br>
+Found dead: <b>11/08/10</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>drowned, body found with head injuries near Levante beach (ES)</b><br>Source: EFE<br>
 
 <br>
 
