--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>03/08/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Fisha (man, 22)</b><br>Region of origin: <b>Eritrea</b><br>Cause of death: <b>stowaway, jumped out of van and hit by several vehicles on A16 highway near Calais (FR)</b><br>Source: VoixDuNord/Ya.N/CMS<br>
+Found dead: <b>09/11/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Masut Iqubal (man, 24)</b><br>Region of origin: <b>Pakistan</b><br>Cause of death: <b>drowned in the Neisse River near Podrosche (DE) close to the Polish-German border</b><br>Source: FFM/ZAG<br>
 
 <br>
 
