--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Oct 15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (child)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died on way from Turkey to Lesbos (GR)</b><br>Source: VK<br>
+Found dead: <b>15/02/18</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>presumed drowned, bodies found on Andalouses beach, Bousfer, west of Oran (DZ)</b><br>Source: ElW/Réf/IOM<br>
 
 <br>
 
