--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>24/03/18</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died of lack of access to medicines in hospital in Turin (IT) after being turned away on Italian-French border</b><br>Source: CDS/FrSoir/IOM<br>
+Found dead: <b>12/04/17</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>presumed drowned in the Strait of Gibraltar off coast of Spain; 6 survivors</b><br>Source: APDHA/IOM/Caminando<br>
 
 <br>
 
