--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>May 06</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Bouba Cisse (man)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>died of starvation on boat travelling from Cape Verde to Canary Islands (ES)</b><br>Source: VK<br>
+Found dead: <b>30/06/96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>died in minefield near Alexandropolis (GR)</b><br>Source: Diário de Notícias<br>
 
 <br>
 
