--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>30/06/96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>died in minefield near Alexandropolis (GR)</b><br>Source: Diário de Notícias<br>
+Found dead: <b>22/11/17</b><br>Number of person: <b>6</b><br>Name, gender, age: <b>N.N. (1 man)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>missing in shipwreck in the Mediterranean Sea between Libya and Italy; 107 rescued</b><br>Source: Proactiva<br>
 
 <br>
 
