--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>04/12/07</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>found dead on vessel that arrived in Los Cristianos de Tenerife (ES); 37 survivors</b><br>Source: MUGAK/EP/ABC/Diario de Noticias/NOB<br>
+Found dead: <b>19/11/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (boy, 12)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned between Turkey and Lesbos (GR), buried in graveyard in Lesbos</b><br>Source: Reu.<br>
 
 <br>
 
