--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>19/11/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (boy, 12)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned between Turkey and Lesbos (GR), buried in graveyard in Lesbos</b><br>Source: Reu.<br>
+Found dead: <b>13/02/18</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Aslı Doğan (woman, 27)</b><br>Region of origin: <b>Turkey</b><br>Cause of death: <b>missing after boat sunk in the Evros River on Turkish-Greek border; was fleeing post-coup crackdown in Turkey</b><br>Source: Reu./TDEMD/IOM Turkey/TurkeyPurge/TRMinute<br>
 
 <br>
 
