--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>13/02/18</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Aslı Doğan (woman, 27)</b><br>Region of origin: <b>Turkey</b><br>Cause of death: <b>missing after boat sunk in the Evros River on Turkish-Greek border; was fleeing post-coup crackdown in Turkey</b><br>Source: Reu./TDEMD/IOM Turkey/TurkeyPurge/TRMinute<br>
+Found dead: <b>16/01/04</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>reportedly drowned after boat from Africa capsized near Fuerteventura (ES)</b><br>Source: Ya.N/MNS/MC/NOB<br>
 
 <br>
 
