--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>26/07/97</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Mihai Sandu (25)</b><br>Region of origin: <b>Romania</b><br>Cause of death: <b>drowned near Oldenburg (DE) shortly after threat of deportation</b><br>Source: FR/MNS/taz/NW/OL/ZAG<br>
+Found dead: <b>Mar 11</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>bodies found in advanced state of decomposition near Lampedusa (IT)</b><br>Source: LR<br>
 
 <br>
 
