--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>19/06/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Jiang Jan Ming (man)</b><br>Region of origin: <b>China</b><br>Cause of death: <b>suffocated in sealed trailer of truck on ferry from Zeebrugge (BE) to Dover (GB)</b><br>Source: VK/Parool/DPA/AP/MUGAK/Reu./AP/NBK/NCADC<br>
+Found dead: <b>02/11/08</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Mohammed Ali (man, 80)</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>died of lung cancer after being denied treatment in Great Britain although he was a legal resident</b><br>Source: IRR<br>
 
 <br>
 
