--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>18/01/96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Rabia el Omari (man, 17)</b><br>Region of origin: <b>Lebanon</b><br>Cause of death: <b>died in arson attack on refugee hostel in Lübeck (DE)</b><br>Source: IRR/Independent/BAIN news/ZAG<br>
+Found dead: <b>12/03/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>El Kadaoui (man, 22)</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>suicide, in youth prison in Wiesbaden (DE) while awaiting deportation</b><br>Source: tazjJW/FR/Konkret/ProAsyl/ZAG<br>
 
 <br>
 
