--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>15/11/13</b><br>Number of person: <b>12</b><br>Name, gender, age: <b>N.N. (4 children; 8 adults)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>drowned after boat capsized off coast of Lefkada (GR); reportedly travelling to Italy</b><br>Source: GuardianUn./Xinhua/AdnK/CBC/MNS<br>
+Found dead: <b>06/07/06</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (1 child, ±3; 1 w, ±30; 1 m)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>drowned while travelling to Canary Islands (ES), found by fishermen off Cape Bojador, Western Sahara</b><br>Source: MNS/PICUM/LV/ICARE/APDHA<br>
 
 <br>
 
