--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>06/07/06</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (1 child, ±3; 1 w, ±30; 1 m)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>drowned while travelling to Canary Islands (ES), found by fishermen off Cape Bojador, Western Sahara</b><br>Source: MNS/PICUM/LV/ICARE/APDHA<br>
+Found dead: <b>06/01/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Talaat Abdulhamid (man, 36)</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>died of hypothermia after walking for 2 days through mountains near Turkish-Bulgarian border</b><br>Source: Independent<br>
 
 <br>
 
