--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Sep 15</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>drowned near Seferihisar (TR)</b><br>Source: Imkander<br>
+Found dead: <b>08/12/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>A. Subramaniam (boy, 17)</b><br>Region of origin: <b>Sri Lanka</b><br>Cause of death: <b>suicide, hanged himself with shoelaces in detention centre in Hannover Airport (DE)</b><br>Source: Morgengr./ST/FR-NieSa/ProAsyl/IRR/HRS<br>
 
 <br>
 
