--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>16/01/18</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (1 woman; 1 man)</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>drowned in shipwreck north of Cap Falcon (DZ); 17 people rescued</b><br>Source: IOM<br>
+Found dead: <b>06/05/14</b><br>Number of person: <b>33</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>missing after boat carrying 130 sank off coast of Libya on way to Italy; 53 survivors</b><br>Source: UNHCR/GuardianUn./BBC/SP<br>
 
 <br>
 
