--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>24/12/11</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>drowned while trying to enter the Spanish enclave of Ceuta (ES) with 80 others</b><br>Source: FE<br>
+Found dead: <b>06/06/13</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Vahide Selami (45)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>drowned after boat sank in the Aegean Sea; 9 rescued</b><br>Source: GreekReporter/Khaama/DN/Xinhua<br>
 
 <br>
 
