--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>07/10/10</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>stowaway, drowned while swimming from boat to Pinedo beach in Valencia (ES)</b><br>Source: Provincias<br>
+Found dead: <b>25/07/03</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned off coast of Fuerteventura in Canary Islands (ES)</b><br>Source: AFP/MUGAK<br>
 
 <br>
 
