--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>12/05/07</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (men)</b><br>Region of origin: <b>Eritrea</b><br>Cause of death: <b>died on way from Tripoli (LY) to Lampedusa (IT), bodies thrown overboard</b><br>Source: FE/Tgcom24/LS<br>
+Found dead: <b>07/02/98</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>stowaway, found frozen in Gatwick Airport (GB) in undercarriage of airplane from Baku (AZ) to London (GB)</b><br>Source: MNS/IRR<br>
 
 <br>
 
