--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>26/09/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Iran</b><br>Cause of death: <b>died of hypoglycemia at Romanian-Serbian border near Jimbolia (RO), border guards refused medical help</b><br>Source: Jurnalul/PressAlert/IOM<br>
+Found dead: <b>15/05/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (boy, 4)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned, found near Kuidertocht asylum centre in Luttelgeest, Flevoland (NL)</b><br>Source: VK<br>
 
 <br>
 
