--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>25/04/96</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 women)</b><br>Region of origin: <b>Sri Lanka</b><br>Cause of death: <b>drowned in rough waters near Vieste (IT)</b><br>Source: TL<br>
+Found dead: <b>Nov 15</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N. (5 boys, 6 months, newborns)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>bodies found in Ahmetce Koyu village, Ayvacik (TR)</b><br>Source: Imkander<br>
 
 <br>
 
